--- a/resolution.tex
+++ b/resolution.tex
@@ -301,7 +301,7 @@ In addition to the change in balance of ascending/descending motion in the deep 
 
 The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, but is restricted from growing too much larger due to substantial subsiding motion aloft. These opposing influences result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study that dilute CAPE exceed a threshold fro convection to ccur, \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
 
-The stratiform scheme becomes more active with resolution, compensating for the reduction in activity of the ZM scheme with resolution, particularly as it relates to the Intertropical Convergence Zone (ITCZ). Energetically it might be expected that stratiform precipitation rates increase with resolution, compensating for the reduction in ZM precipitation rates to satisfy the global mean radiative convective equilibrium. But from a process point of view, it is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate with resolution.
+The stratiform scheme becomes more active with resolution, compensating for the reduction in activity of the ZM scheme with resolution, particularly as it relates to the Intertropical Convergence Zone (ITCZ). Energetically, it is expected that stratiform precipitation rates increase with resolution to compensate for the reduction in convection from the ZM scheme in order satisfy energy balance through global mean radiative convective equilibrium. But from a process point of view, it is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate with resolution.
 
 {\color{red}{Wrap up with a closing paragraph}}
 
